--- a/package.json
+++ b/package.json
@@ -18,15 +18,17 @@
     "@angular/platform-browser": "^5.0.0",
     "@angular/platform-browser-dynamic": "^5.0.0",
     "core-js": "^2.5.1",
+    "rxjs-compat": "^6.3.3",
     "zone.js": "~0.8.4"
   },
   "devDependencies": {
+    "@angular/cli": "^6.0.3",
     "@angular/compiler-cli": "^5.0.0",
     "@types/node": "^8.0.51",
-    "@angular/cli": "^1.5.0",
     "codelyzer": "^4.0.1",
     "ts-node": "^3.3.0",
     "tslint": "^5.8.0",
-    "typescript": "^2.5.3"
+    "typescript": "^2.5.3",
+    "@angular-devkit/build-angular": "~0.6.3"
   }
 }
